; ModuleID = '/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_wireprotocol.c_php_mysqlnd_net_store_length.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_wireprotocol.c_php_mysqlnd_net_store_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64* @php_mysqlnd_net_store_length(i64* %0, i64 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  store i64* %0, i64** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = call i64 @L64(i32 251)
  %8 = icmp slt i64 %6, %7
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load i64, i64* %5, align 8
  %11 = load i64*, i64** %4, align 8
  store i64 %10, i64* %11, align 8
  %12 = load i64*, i64** %4, align 8
  %13 = getelementptr inbounds i64, i64* %12, i64 1
  store i64* %13, i64** %3, align 8
  br label %48

14:                                               ; preds = %2
  %15 = load i64, i64* %5, align 8
  %16 = call i64 @L64(i32 65536)
  %17 = icmp slt i64 %15, %16
  br i1 %17, label %18, label %27

18:                                               ; preds = %14
  %19 = load i64*, i64** %4, align 8
  %20 = getelementptr inbounds i64, i64* %19, i32 1
  store i64* %20, i64** %4, align 8
  store i64 252, i64* %19, align 8
  %21 = load i64*, i64** %4, align 8
  %22 = load i64, i64* %5, align 8
  %23 = trunc i64 %22 to i32
  %24 = call i32 @int2store(i64* %21, i32 %23)
  %25 = load i64*, i64** %4, align 8
  %26 = getelementptr inbounds i64, i64* %25, i64 2
  store i64* %26, i64** %3, align 8
  br label %48

27:                                               ; preds = %14
  %28 = load i64, i64* %5, align 8
  %29 = call i64 @L64(i32 16777216)
  %30 = icmp slt i64 %28, %29
  br i1 %30, label %31, label %40

31:                                               ; preds = %27
  %32 = load i64*, i64** %4, align 8
  %33 = getelementptr inbounds i64, i64* %32, i32 1
  store i64* %33, i64** %4, align 8
  store i64 253, i64* %32, align 8
  %34 = load i64*, i64** %4, align 8
  %35 = load i64, i64* %5, align 8
  %36 = trunc i64 %35 to i32
  %37 = call i32 @int3store(i64* %34, i32 %36)
  %38 = load i64*, i64** %4, align 8
  %39 = getelementptr inbounds i64, i64* %38, i64 3
  store i64* %39, i64** %3, align 8
  br label %48

40:                                               ; preds = %27
  %41 = load i64*, i64** %4, align 8
  %42 = getelementptr inbounds i64, i64* %41, i32 1
  store i64* %42, i64** %4, align 8
  store i64 254, i64* %41, align 8
  %43 = load i64*, i64** %4, align 8
  %44 = load i64, i64* %5, align 8
  %45 = call i32 @int8store(i64* %43, i64 %44)
  %46 = load i64*, i64** %4, align 8
  %47 = getelementptr inbounds i64, i64* %46, i64 8
  store i64* %47, i64** %3, align 8
  br label %48

48:                                               ; preds = %40, %31, %18, %9
  %49 = load i64*, i64** %3, align 8
  ret i64* %49
}

declare dso_local i64 @L64(i32) #1

declare dso_local i32 @int2store(i64*, i32) #1

declare dso_local i32 @int3store(i64*, i32) #1

declare dso_local i32 @int8store(i64*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
